--- a/duxiaoman.html
+++ b/duxiaoman.html
@@ -30,5 +30,7 @@
 <p class="p2"><span class="s1">13466754536</span></p>
 <p class="p2"><span class="s1">13466755557</span></p>
 <p class="p2"><span class="s1">duxiaoman</span></p>
+<p class="p2"><span class="s1">baidu</span></p>
+<p class="p2"><span class="s1">baidu-int</span></p>
 </body>
 </html>
